# python_pro_hw

./: README.md  main.py  pyproject.toml  setup.ini
my_todo/: my_todo.py
